<resources>
    <string name="app_name">Kotlin Demo</string>
    <string name="title_activity_dice_roll">DiceRollActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!--    //navigation-->
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>

    <string name="diceroll">Dice Roll</string>
    <string name="subclass_inheritance">Subclass Inheritance</string>
    <string name="login_activity">Login Activity</string>
    <string name="map_activity">Map Activity</string>
    <string name="sqlite_database">Sqlite Database</string>
    <string name="classes">Classes</string>
    <string name="item">Item</string>
    <string name="todo">TODO</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="add_data">Add Data</string>
    <string name="read">Read</string>
    <string name="name_n_n">Name\n\n</string>
    <string name="age_n_n">Age\n\n</string>
    <string name="pick_date_and_time">Pick Date and TIme</string>
    <string name="tutorials_point">Tutorials Point</string>
    <string name="about_us_fragment">About Us Fragment</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="about_us">About Us</string>
    <string name="android_knowledge">Android Knowledge</string>
    <string name="time">Time</string>
    <string name="press_the_back_button_of_your_phone">Press The Back Button of Your Phone.</string>
    <string name="coustom_dialog">Coustom Dialog</string>
    <string name="are_you_want_to_sure_to_exit">Are you want to sure to Exit!</string>
    <string name="cancle">Cancle</string>
    <string name="ok">ok</string>
    <string name="notification">Notification</string>
    <string name="miniprojects">miniProjects</string>
    <string name="jetpackdesign">Jetpack Design pages</string>
    <string name="blog_app_with_firebase">Blog app with Firebase</string>
    <string name="add_employee_details">Add employee details</string>
    <string name="enter_auther_name">Enter Auther Name</string>
    <string name="enter_detail">Enter Detail</string>
    <string name="enter_title">Enter Title</string>
    <string name="add_data_to_firebase">Add Data to Firebase</string>
    <string name="dommy_text_for_title">dommy text for title</string>
    <string name="title_activity_demo">Demo</string>
    <string name="app_tagline">Better surveys with Jetpack Compose</string>
    <string name="dummy_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed facilisis urna non nisl laoreet, eu sagittis sapien posuere. Nulla facilisi. In vestibulum congue massa, nec hendrerit tortor. Phasellus bibendum fringilla quam, eu auctor urna venenatis at. Integer fringilla venenatis libero vel tempus. Proin condimentum, odio non tempor euismod, ante erat cursus justo, nec volutpat erat arcu eget libero. Ut dignissim luctus turpis, at sodales nunc posuere nec.
</string>


</resources>