<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">



    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/gray_500"
        android:textColor="@color/blue_800"
        android:text="@string/diceroll" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/gray_500"
        android:textColor="@color/blue_800"
        android:text="@string/subclass_inheritance" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/gray_500"
        android:textColor="@color/blue_800"
        android:text="@string/login_activity" />

    <Button
        android:id="@+id/btnmap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/gray_500"
        android:textColor="@color/blue_800"
        android:text="@string/map_activity" />
    <Button
        android:id="@+id/btnSqlite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/gray_500"
        android:textColor="@color/blue_800"
        android:text="@string/sqlite_database" />
    <Button
        android:id="@+id/btnClasses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/gray_500"
        android:textColor="@color/blue_800"
        android:text="@string/classes" />

    <Button
        android:id="@+id/btnproject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/gray_500"
        android:textColor="@color/blue_800"
        android:text="@string/miniprojects" />

    <Button
        android:id="@+id/btn_jetpack_design"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/gray_500"
        android:textColor="@color/blue_800"
        android:text="@string/jetpackdesign" />


</LinearLayout>