<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_gravity="center_horizontal"
    android:gravity="center_horizontal">

    <EditText
        android:id="@+id/txtInputName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:backgroundTint="@color/text_color"
        android:hint="@string/name"
        android:inputType="text"
        android:textColor="@color/text_color"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/txtInputAge"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:backgroundTint="@color/text_color"
        android:hint="@string/age"
        android:inputType="text"
        android:textColor="@color/text_color"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btn_adddata"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_button_drawable"
        android:backgroundTint="@color/blue_800"
        android:text="@string/add_data" />

    <Button
        android:id="@+id/btn_read"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_button_drawable"
        android:backgroundTint="@color/blue_800"
        android:text="@string/read" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Text view to get all name -->
        <TextView
            android:id="@+id/Name"
            android:textAlignment="center"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:text="@string/name_n_n"
            android:textSize="22sp"
            android:padding="10sp"
            android:textColor="#000000"/>

        <!-- Text view to get all ages -->
        <TextView
            android:layout_weight="1"
            android:id="@+id/Age"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:text="@string/age_n_n"
            android:textSize="22sp"
            android:padding="10sp"
            android:textColor="#000000"/>

    </LinearLayout>

</LinearLayout>