<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/add_data_to_firebase"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />
    <!--EditText for adding employee name-->
    <EditText
        android:id="@+id/idEdtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_title"
        android:importantForAutofill="no"
        android:inputType="textPersonName" />

    <!--EditText for adding employee phone-->
    <EditText
        android:id="@+id/idEdtDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/enter_detail"
        android:importantForAutofill="no"
        android:inputType="text" />

    <!--EditText for adding employee address-->
    <EditText
        android:id="@+id/idEdtAutherName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/enter_auther_name"
        android:inputType="textPostalAddress" />

    <!--Button for adding data to Firebase-->
    <Button
        android:id="@+id/idBtnSendData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/black"
        android:text="@string/add_employee_details"
        android:textAllCaps="false" />

</LinearLayout>