<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="180dp"
            android:gravity="center_horizontal"
            android:text="@string/press_the_back_button_of_your_phone"
            android:textSize="30sp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/btn_dialog"
            android:layout_width="200sp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_button_drawable"
            android:backgroundTint="@color/blue_800"
            android:text="@string/coustom_dialog" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llDialogbox"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_transperent"
        android:gravity="center"
        android:padding="10dp"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/transperent_shape"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/are_you_want_to_sure_to_exit"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">

                <Button
                    android:id="@+id/btn_ok"
                    android:layout_width="150sp"
                    android:layout_height="50dp"
                    android:background="@drawable/rounded_button_drawable"
                    android:backgroundTint="@color/blue_800"
                    android:text="@string/ok" />

                <Button
                    android:id="@+id/btn_cancle"
                    android:layout_width="150sp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/rounded_button_drawable"
                    android:backgroundTint="@color/blue_800"
                    android:text="@string/cancle" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
